crates/engage/tests/integrations/snapshots/integrations__part_of_with_errors_list_all_relaxed@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: "Should print all processes and warnings in an Engage file using \"part-of\"."
---
a
b
b-post
b-post-post
b-pre
b-pre-pre
c
invalid-a
invalid-b
invalid-c
invalid-d
invalid-e
invalid-f
invalid-g
invalid-h
