crates/engage/tests/integrations/snapshots/integrations__part_of_with_errors_list_relaxed@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: "Should print selectable processes and warnings in an Engage file using \"part-of\"."
---
a
b
c
invalid-a
invalid-b
invalid-c
invalid-d
