crates/engage/tests/integrations/snapshots/integrations__process_prints_to_stderr@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: "Should exit sucessfully after redirecting the process' output to stdout."
---
  ╭─┬◀ starting
a │E│ hello world
  ╰─┴▶ success
