crates/engage/tests/integrations/snapshots/integrations__process_unknown_fields@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit with an error about unknown fields.
---

