crates/engage/tests/integrations/snapshots/integrations__program_not_found@stderr.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit with an error about the program not being found.
---
#1
Error: failed to run 1 task

#2 (which caused #1)
Error: task `task` failed

#3 (which caused #2, causing #1)
Error: failed to spawn command "thiscommandalmostcertainlydoesntexistonanyones\"computer\""

#4 (which caused #3, causing #2, causing #1)
Error: No such file or directory (os error 2)
